# gridio

./: .gitignore  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: CI.yml
api/: index.html
benchmarks/: fast_bench.py  index.html
docs/: mkdoc_requirements.txt
pytextgrid/: __init__.py  textgrid.py
search/: search_index.json
src/: lib.rs
tests/: test_dataframe_conversion.py  test_textgrid_wrapper.py
textgrid/src/: converter.rs  lib.rs  parser_long.rs  parser_short.rs  textgrid.rs  utils.rs  writer.rs
textgrid/tests/: test.rs
